# cygnus

./: .clang-format  .gitignore  .travis.yml  LICENSE  README.md  deploy.ps1  dmg.json  install.nsi  package-deb.sh  package.json  tsconfig.json  typings.json
.github/workflows/: release.yml
packageroot/DEBIAN/: control
src/: CMakeLists.txt  ClueWidget.cpp  ClueWidget.h  Colors.h  FilledLabel.cpp  FilledLabel.h  Info.plist.in  Main.ts  MainWindow.cpp  MainWindow.h  MainWindow.ui  Puzzle.cpp  Puzzle.h  Puzzle.ts  PuzzleWidget.cpp  PuzzleWidget.h  Settings.h  TimerWidget.cpp  TimerWidget.h  Version.h  cygnus.pro  index.html  main.cpp  renderer.ts  resources.rc  style.css
src/resources/: icon.icns
